<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/drawer_booking"
            android:icon="@drawable/ic_statistics"
            android:title="@string/booking"/>

        <item
            android:id="@+id/drawer_observation"
            android:icon="@drawable/ic_statistics"
            android:title="@string/observation"/>

        <item
            android:id="@+id/drawer_account"
            android:icon="@drawable/ic_statistics"
            android:title="@string/account"/>

        <item
            android:id="@+id/drawer_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics"/>

        <item
            android:id="@+id/drawer_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>

        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>


    </group>
</menu>